# Software-Development-For-Information-Systems

./: CMakeLists.txt  Graph.cpp  Makefile  README.md  apostas_se_diastas.cpp  apostasi.cpp  ci.yml  library.h  logo.txt  main
.github/workflows/: main.yml
headers/: Metrics.h  library.h
headers/config/: Logger.h  LoggerConfig.h
headers/structures/: Dataset.h  GraphAlgorithm.h  GraphInitialization.h  apostas_se_diastas.h
headers/structures/graph/: GraphInitialization.h  Optimizations.h
headers/structures/point/: Neighbors.h  Point.h  PointInfo.h
headers/structures/priorityQueue/: PriorityQueue.h
headers/structures/randomProjectionTrees/: RandomProjectionTrees.h
headers/structures/scheduler/: JobDependency.h  JobNode.h  JobQueue.h  JobScheduler.h
headers/structures/scheduler/job/: CalculateDistanceJob.h  FindKNearestNeighborsForPointJob.h  GraphInitializationJob.h  Job.h  KNNJob.h  NormCalculationJob.h  RandomProjectionTreeJob.h
headers/structures/unorderedMap/: KeyValue.h  UnorderedMap.h
headers/structures/vector/: Vector.h
headers/utils/: Metrics.h  StatisticInfo.h  Statistics.h
scripts/: gplusplus_install.sh  install_gtest.sh
src/: GraphInitialization.cpp  Metrics.cpp  library.cpp
src/config/: Logger.cpp  LoggerConfig.cpp
src/structures/: Dataset.cpp  GraphInitialization.cpp  Neighbors.cpp  Point.cpp  Point.h  apostas_se_diastas.cpp
src/structures/graph/: GraphInitialization.cpp  Optimizations.cpp
src/structures/point/: Neighbors.cpp  Point.cpp  PointInfo.cpp
src/structures/randomProjectionTrees/: RandomProjectionTrees.cpp
src/structures/scheduler/: Job.h  JobDependency.cpp  JobNode.h  JobQueue.cpp  JobQueue.h  JobScheduler.cpp  JobScheduler.h
src/structures/scheduler/job/: CalculateDistanceJob.cpp  FindKNearestNeighborsForPointJob.cpp  GraphInitializationJob.cpp  Job.cpp  KNNJob.cpp  NormCalculationJob.cpp  RandomProjectionTreeJob.cpp
src/structures/unorderedMap/: KeyValue.cpp  UnorderedMap.cpp
src/structures/vector/: Vector.cpp
src/utils/: Metrics.cpp  StatisticInfo.cpp  Statistics.cpp
tests/unit_tests/structures/dataset/: DatasetTest.cpp
tests/unit_tests/structures/graph/: GraphInitializationTest.cpp  OptimizationsTest.cpp  RandomProjectionTreesTest.cpp
tests/unit_tests/structures/point/: NeighborTest.cpp  PointTest.cpp
tests/unit_tests/structures/unorderedMap/: UnorderedMapTest.cpp
tests/unit_tests/structures/vector/: VectorTestFloat.cpp  VectorTestNeighbor.cpp  VectorTestPoint.cpp
tests/unit_tests/utils/: MetricsTest.cpp
